<resources>
    <string name="app_name">Mi Formulario</string>

    <string name="activity_main_hint_name">Nombre completo</string>
    <string name="activity_main_hint_birthday">Fecha de nacimiento</string>
    <string name="activity_main_hint_phone">Teléfono</string>
    <string name="activity_main_hint_email">Email</string>
    <string name="activity_main_hint_description">Descripción contacto</string>
    <string name="activity_main_button_next">Siguiente</string>

    <string name="activity_confirmar_text">Confirmar datos</string>
    <string name="activity_confirmar_button_edit">Editar datos</string>

    <string name="NAME_PARAMETER">NAME_PARAMETER</string>
    <string name="BIRTHDAY_PARAMETER">BIRTHDAY_PARAMETER</string>
    <string name="PHONE_PARAMETER">PHONE_PARAMETER</string>
    <string name="EMAIL_PARAMETER">EMAIL_PARAMETER</string>
    <string name="DESCRIPTION_PARAMETER">DESCRIPTION_PARAMETER</string>
</resources>